kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: apocalypse.itsover
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apocalypse-svc
                port:
                  number: 80
  ingressClassName: nginx
